# GloriousCoreSrc

./: .clang-format  .gitlab-ci.yml.stale  .gitmodules  CMakeLists.txt  README.md  build_with_cmake.ps1  build_with_cmake.sh  cmakejs.cmake  electron.vite.config.ts  fakeDeviceData.json  package.json  tsconfig.node.json  tsconfig.web.json
build_cmake_js/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_cmake_js/Debug/: AudioSession.node  GloriousMOISDK.node  LaunchWinSocket.node  hiddevice.node
build_cmake_js/Release/: hiddevice.node
build_cmake_js/src/electron-process/AudioSession/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AudioSession.vcxproj  AudioSession.vcxproj.filters  cmake_install.cmake
build_cmake_js/src/electron-process/GloriousMOISDK/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GloriousMOISDK.vcxproj  GloriousMOISDK.vcxproj.filters  cmake_install.cmake
build_cmake_js/src/electron-process/LaunchWinSocket/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  LaunchWinSocket.vcxproj  LaunchWinSocket.vcxproj.filters  cmake_install.cmake
build_cmake_js/src/electron-process/hiddevice/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  hiddevice.vcxproj  hiddevice.vcxproj.filters
build_cmake_js/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_cmake_js/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_cmake_js/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
nativeModules/: README.md
nativeModules/darwin/arm64/: AudioSession.node  GloriousMOISDK.node  LaunchWinSocket.node  hiddevice.node
nativeModules/darwin/x86_64/: AudioSession.node  GloriousMOISDK.node  LaunchWinSocket.node  hiddevice.node
nativeModules/win/x64/: AudioSession.node  GloriousMOISDK.node  LaunchWinSocket.node  hiddevice.node
publishing/: Core Setup Packager.iss
publishing/files/: license.txt
publishing/setup/: README.md
src/common/: EventVariable.ts  FunctionVariable.ts  SupportData.ts  device-category.ts  ipc-progress.ts  ipc-response.ts  utils.ts
src/common/channel-maps/: AppChannel.map.ts  DataChannel.map.ts  DeviceChannel.map.ts  EnvironmentChannel.map.ts  MessageChannels.ts
src/common/data/: battery-status.ts  device-input-layout.data.ts  keyboard-lighting-data.ts  lighting-presets.data.ts  valueC-data.ts
src/common/data/records/: app-record.ts  device-data.record.ts  lighting-layout.record.ts  macro.record.ts  plugin-device.record.ts
src/common/data/structures/: hsl-color.struct.ts  rgb-color.struct.ts
src/common/data/types/: compute-range.type.ts  plugin-devices.type.ts
src/electron-process/: AudioSession64.bat  GloriousMOISDK.bat  LaunchWinSocket.bat  app.settings.ts  document.docx  hiddevice64.bat  index.ts
src/electron-process/AudioSession/: CMakeLists.txt  binding.gyp
src/electron-process/AudioSession/ASP/: CMakeLists.txt  GloriousAudioDevice.cpp  GloriousAudioDevice.h  GloriousAudioServicePlugin.cpp  PerAppDataHandlers.cpp  PerAppDataHandlers.h
src/electron-process/AudioSession/src/: AudioSession.h  AudioSessionMac.h
src/electron-process/AudioSession/src/tools/: WriteLog.cpp  WriteLog.h
src/electron-process/GloriousMOISDK/: CMakeLists.txt
src/electron-process/GloriousMOISDK/src/: GloriousMOISDK.h
src/electron-process/LaunchWinSocket/: CMakeLists.txt  binding.gyp
src/electron-process/LaunchWinSocket/src/: LaunchWinSocket.h
src/electron-process/LaunchWinSocket/src/tools/: WriteLog.cpp  WriteLog.h
src/electron-process/auth/: auth.config.ts  auth.process.ts  auth.service.ts
src/electron-process/cloud/: cloud.config.ts  cloud.service.ts
src/electron-process/cloud/graphql/: API.ts  mutations.ts  queries.ts  schema.json  subscriptions.ts
src/electron-process/hiddevice/: CMakeLists.txt  binding.gyp
src/electron-process/hiddevice/src/: hiddevice.h
src/electron-process/renderer-interop/app-files/: appFiles.ts  appPaths.ts  dbFiles.ts  dbMigration.ts  helpers.ts
src/electron-process/renderer-interop/dbapi/: AppDB.ts  AppSettingDB.ts  EQDB.ts  (+4 more)
src/electron-process/thridparty/hidapi_old/: CMakeLists.txt
src/electron-process/thridparty/hidapi_old/hidapi/: hidapi.h
src/electron-process/thridparty/hidapi_old/windows/: hid.c
src/environments/: environment.dev.ts  environment.test.ts  environment.ts
src/renderer-process/: default.theme.css  index.css  index.html  index_old.html  main.tsx
src/renderer-process/adapters/: devices.adapter.tsx
src/renderer-process/components/: component.types.ts
src/renderer-process/contexts/: app-data.context.tsx  cloud.context.tsx  devices.context.tsx  records.context.tsx  rgbsync.context.tsx  translations.context.tsx  ui.context.tsx  update.context.tsx
src/renderer-process/data/: binding-type.ts  color-setting-style.ts  device-icon-data.ts  device-image-adjustment.ts  device-product-color.ts  device-product-scale.ts  display-option.ts  dpi-option.ts  dpi-section.ts  event-key-binding-code.map.ts  image-attributes.ts  input-latency.ts  keybinding-layer.ts  keyboard-function.ts  liftoff-distance.ts  lighting-color-stop.ts  lighting-effect.ts  management-section.ts  modifier-key.ts  mouse-function.ts  multimedia-option.ts  per-key-action.data.ts  polling-rate.ts  position-2d.ts  rgb-gradient.ts  rotary-encoder-action.ts  shortcut-option.ts  standby-type.ts  ui-device-data.ts  ui-device.ts  update-task.ts  windows-shortcut-option.ts
src/renderer-process/electron-interop/: device-connection-status.class.ts
src/renderer-process/managers/: FirmwareManager.ts
src/renderer-process/services/: --device.service.ts  app.service.ts  cloud.service.ts  color.service.ts  data.service.ts  device.service.ts  import-export.service.ts  ipc.service.ts  mock-devices.service.ts  protocol.service.ts  records.service.ts  updates.service.ts
src/renderer-process/support/: app.events.ts  cloneDeep.ts  color-output.interface.ts  hsl.interface.ts  mouse-handler-output.interface.ts  service-locator.ts
src/renderer-process/utils/: dynamic-keys.ts  icons.ts
test/: Devices.spec.js  SupportData.spec.js  Tests.spec.js  example.js
(+468 files in other folders)
